--- a/STM32f103C8T6/STM32F103-Tutorial-master/12.ADC_LCD_16x2/MDK-ARM/LCD1602/LCD1602.build_log.htm
+++ b/STM32f103C8T6/STM32F103-Tutorial-master/12.ADC_LCD_16x2/MDK-ARM/LCD1602/LCD1602.build_log.htm
@@ -2,11 +2,71 @@
 <body>
 <pre>
 <h1>µVision Build Log</h1>
+<h2>Tool Versions:</h2>
+IDE-Version: µVision V5.13.0.0
+Copyright (C) 2014 ARM Ltd and ARM Germany GmbH. All rights reserved.
+License Information: elni hung, nguyen, LIC=32B2Z-J224N-WFEI7-EJITE-W8ZH9-3SFGA
+ 
+Tool Versions:
+Toolchain:       MDK-ARM Standard  Version: 5.13.0.0
+Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
+C Compiler:      Armcc.exe V5.05 update 1 (build 106)
+Assembler:       Armasm.exe V5.05 update 1 (build 106)
+Linker/Locator:  ArmLink.exe V5.05 update 1 (build 106)
+Library Manager: ArmAr.exe V5.05 update 1 (build 106)
+Hex Converter:   FromElf.exe V5.05 update 1 (build 106)
+CPU DLL:         SARMCM3.DLL V5.13.0.0
+Dialog DLL:      DCM.DLL V1.13.1.0
+Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V2.0.14.0_KEIL
+Dialog DLL:      TCM.DLL V1.14.4.0
+ 
 <h2>Project:</h2>
-C:\STM32\STM32F103-Tutorial\12.ADC_LCD_16x2\MDK-ARM\LCD1602.uvproj
-Project File Date:  05/13/2016
+E:\Elnino\Lap_trinh_nhung\ARM\arm\STM32f103C8T6\STM32F103-Tutorial-master\12.ADC_LCD_16x2\MDK-ARM\LCD1602.uvproj
+Project File Date:  01/08/2017
 
 <h2>Output:</h2>
+Rebuild target 'LCD1602'
+compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_rcc_ex.c...
+compiling stm32f1xx_hal_dma.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_gpio.c...
+compiling stm32f1xx_hal_tim.c...
+compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_pwr.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_tim_ex.c...
+compiling stm32f1xx_it.c...
+compiling stm32f1xx_hal_msp.c...
+compiling main.c...
+../Src/main.c(76): warning:  #188-D: enumerated type mixed with another type
+  HAL_GPIO_WritePin(GPIOA,EN_Pin,1);
+../Src/main.c(78): warning:  #188-D: enumerated type mixed with another type
+  HAL_GPIO_WritePin(GPIOA,EN_Pin,0);    
+../Src/main.c(84): warning:  #188-D: enumerated type mixed with another type
+  HAL_GPIO_WritePin(GPIOA,D4_Pin,Data&0x01);
+../Src/main.c(85): warning:  #188-D: enumerated type mixed with another type
+  HAL_GPIO_WritePin(GPIOA,D5_Pin,(Data>>1)&0x01);
+../Src/main.c(86): warning:  #188-D: enumerated type mixed with another type
+  HAL_GPIO_WritePin(GPIOA,D6_Pin,(Data>>2)&0x01);
+../Src/main.c(87): warning:  #188-D: enumerated type mixed with another type
+  HAL_GPIO_WritePin(GPIOA,D7_Pin,(Data>>3)&0x01);       
+../Src/main.c(107): warning:  #188-D: enumerated type mixed with another type
+    HAL_GPIO_WritePin(GPIOA,RS_Pin,0);
+../Src/main.c(131): warning:  #188-D: enumerated type mixed with another type
+    HAL_GPIO_WritePin(GPIOA,RS_Pin,1);
+../Src/main.c(133): warning:  #188-D: enumerated type mixed with another type
+    HAL_GPIO_WritePin(GPIOA,RS_Pin,0);
+../Src/main.c(231): warning:  #188-D: enumerated type mixed with another type
+                            |D6_Pin|D7_Pin, GPIO_PIN_SET);
+../Src/main.c: 10 warnings, 0 errors
+assembling startup_stm32f103xe.s...
+compiling system_stm32f1xx.c...
+linking...
+Program Size: Code=4068 RO-data=352 RW-data=8 ZI-data=1024  
+FromELF: creating hex file...
+"LCD1602\LCD1602.axf" - 0 Error(s), 10 Warning(s).
 </pre>
 </body>
 </html>
